--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -3,5 +3,5 @@ spring:
     name: MovieService
   datasource:
     url: jdbc:mysql://localhost:3306
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
+    username: root
+    password: Dktran897
